--- a/index copy.html
+++ b/index copy.html
@@ -604,9 +604,161 @@
       font-family: __Inter_20951f, __Inter_Fallback_20951f;
       font-style: normal
     }
+  </style>
+  <style type="text/css">
+    .dice-box {
+      transform: scale(0.5);
+    }
 
-    .-mt30 {
-      margin-top: -30px;
+    /*需要注意css3中X轴以右为正方向，Y轴向下为正方向，Z轴以向屏幕外面为正方向*/
+    #wrapper {
+      perspective: 500px;
+      /*设置骰子被查看位置的视图（观察者与z=0平面的距离）：*/
+      overflow: hidden;
+    }
+
+    #group {
+      width: 200px;
+      height: 200px;
+      position: relative;
+      transform-style: preserve-3d;
+      transform-origin: 50% 50% -100px;
+      margin: 200px auto;
+      animation: scroll 3s linear 0s infinite;
+      background-color: #E8E8E9;
+      border-radius: 20px;
+    }
+
+    .page {
+      width: 200px;
+      height: 200px;
+      position: absolute;
+      border-radius: 20px;
+      text-align: center;
+      overflow: hidden;
+      text-align: center;
+      background-color: #E8E8E9;
+      border: 1px solid #E0E0E0;
+    }
+
+    /*开始设置每个面的角度，将6个面拼成一个正方体*/
+    #page1 {}
+
+    #page2 {
+      transform-origin: right;
+      /*点数为2的面以右边为转轴转动*/
+      transform: rotateY(-90deg);
+      /*绕Y轴逆时针转动90度*/
+    }
+
+    #page3 {
+      transform-origin: left;
+      /*点数为3的面以左边为转轴转动*/
+      transform: rotateY(90deg);
+      /*绕Y轴顺时针转动90度*/
+    }
+
+    #page4 {
+      transform-origin: top;
+      /*点数为4的面以上边为转轴转动*/
+      transform: rotateX(-90deg);
+      /*绕X轴逆时针转动90度*/
+    }
+
+    #page5 {
+      transform-origin: bottom;
+      /*点数为5的面以下边为转轴转动*/
+      transform: rotateX(90deg);
+    }
+
+    #page6 {
+      transform: translateZ(-200px);
+    }
+
+    .page span {
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+      border-radius: 25px;
+      background-color: #050505;
+      box-shadow: inset 3px 3px 5px #000;
+      /*骰子点数的阴影效果*/
+    }
+
+    /*下面是对点数样式的控制*/
+    #page1 span {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      margin-top: -25px;
+      margin-left: -25px;
+      background-color: #f00;
+    }
+
+    #page2 span {
+      margin: 75px 25px;
+    }
+
+    #page3 span {
+      position: absolute;
+    }
+
+    #page3 span:first-child {
+      top: 20px;
+      left: 20px;
+    }
+
+    #page3 span:nth-child(2) {
+      top: 75px;
+      left: 75px;
+    }
+
+    #page3 span:last-child {
+      bottom: 20px;
+      right: 20px;
+    }
+
+    #page4 span {
+      margin: 25px 25px;
+    }
+
+    #page5 span {
+      margin: 25px 25px;
+    }
+
+    #page5 span:last-child {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-left: -25px;
+      margin-top: -25px;
+    }
+
+    #page6 span {
+      margin: 7px 25px;
+    }
+
+    /*设置骰子具体动画效果 确保骰子的每个面都可以看到，后面会运动快一些*/
+    @keyframes scroll {
+      0% {
+        transform: rotateY(0deg) rotateX(0deg) rotateZ(0deg);
+      }
+
+      25% {
+        transform: rotateY(0deg) rotateX(90deg) rotateZ(90deg);
+      }
+
+      50% {
+        transform: rotateY(0deg) rotateX(180deg) rotateZ(180deg);
+      }
+
+      75% {
+        transform: rotateY(180deg) rotateX(270deg) rotateZ(270deg);
+      }
+
+      100% {
+        transform: rotateY(360deg) rotateX(360deg) rotateZ(360deg);
+      }
     }
   </style>
 </head>
@@ -624,7 +776,7 @@
     // 获取 React 和 ReactDOM 对象
     const { useState, useEffect, useRef } = React;
     const { render } = ReactDOM;
-    const Dice = ({ n, data }) => {
+    const DiceBar = ({ n, data }) => {
       const domRef = useRef(null);
       console.log(n, data)
 
@@ -647,12 +799,12 @@
         // 指定图表的配置项和数据
         const option = {
           title: {
-            text: `${n}两个骰子点数和统计`
+            text: `${n}次骰子点数统计`
           },
           tooltip: {},
-          // legend: {
-          //   data: ['次数']
-          // },
+          legend: {
+            data: ['次数']
+          },
           xAxis: {
             data: ['2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12']
           },
@@ -672,19 +824,26 @@
 
       return (
         <div className="dice-box border m-4 p-4">
-          <div className=" h-[400px] mt-4" ref={domRef} >
+          <div className="w-[400px] h-[400px] mt-4" ref={domRef}>
           </div>
-          <div className="-mt30">
-            <p>2，3，4，10，11，12出现的次数：
-              {
-                data.filter(el => [2, 3, 4, 10, 11, 12].includes(el.name * 1)).reduce((a, b) => a + b.value, 0)
-              }
-            </p>
-            <p>5，6，7，8，9出现的次数：
-              {
-                data.filter(el => [5, 6, 7, 8, 9].includes(el.name * 1)).reduce((a, b) => a + b.value, 0)
-              }
-            </p>
+        </div>
+      )
+    }
+
+
+    const Dice = () => {
+
+      return (
+        <div className="dice-box" >
+          <div id="wrapper">
+            <div id="group">
+              <div class="page" id="page1"><span></span></div>
+              <div class="page" id="page2"><span></span><span></span></div>
+              <div class="page" id="page3"><span></span><span></span><span></span></div>
+              <div class="page" id="page4"><span></span><span></span><span></span><span></span></div>
+              <div class="page" id="page5"><span></span><span></span><span></span><span></span><span></span></div>
+              <div class="page" id="page6"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+            </div>
           </div>
         </div>
       )
@@ -764,10 +923,8 @@
           <div className="flex flex-wrap">
             {list.map((el, index) => {
               return (
-                <div key={index} className="h-[440px] box-border mb-20" style={{
-                  width: "33.33%",
-                }}>
-                  <Dice n={el.n} data={el.data} />
+                <div key={index} className="w-[490px] h-[440px] box-border mb-20">
+                  <DiceBar n={el.n} data={el.data} />
                 </div>
               )
             })}
