--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
 
     h2 {
       font-weight: normal;
+      font-size: 20px;
+    }
+
+    /* 媒体查询屏幕宽度小于1920 */
+    @media (max-width: 1920px) {
+      h2 {
+        font-size: 20px;
+      }
     }
 
     a {
